# gemma-lab-assistant

./: README.md
gemma-backend/: README.md  chat_interface.py  prompts.py  pyproject.toml  qr_display.html  vlm_config.py  vlm_main.py  vlm_models.py  vlm_routers.py  vlm_service.py
gemma-mobile/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gemma-mobile/app/: build.gradle.kts
gemma-mobile/app/src/main/: AndroidManifest.xml
gemma-mobile/app/src/main/java/com/example/mediapipeapp/: DesktopApiService.kt  LlmChatViewModel.kt  LlmChatViewModelFactory.kt  MainActivity.kt  PreferencesRepository.kt  SystemPrompts.kt
gemma-mobile/app/src/main/java/com/example/mediapipeapp/data/: ChatDatabase.kt  Converters.kt
gemma-mobile/app/src/main/java/com/example/mediapipeapp/data/dao/: ConversationDao.kt  MessageDao.kt
gemma-mobile/app/src/main/java/com/example/mediapipeapp/data/entities/: Conversation.kt  Message.kt  (+1 more)
gemma-mobile/app/src/main/java/com/example/mediapipeapp/repository/: ChatRepository.kt
gemma-mobile/app/src/main/java/com/example/mediapipeapp/ui/: ChatHistoryScreen.kt  ChatScreen.kt  ChatViewModel.kt  HomeScreen.kt  Navigation.kt  SettingsDialog.kt  StructuredResponseCard.kt
gemma-mobile/app/src/main/java/com/example/mediapipeapp/utils/: AudioPlayer.kt  AudioRecorder.kt
gemma-mobile/app/src/main/java/com/example/mediapipeapp/wifi/: QRCodeScanner.kt  WifiPairingManager.kt
gemma-mobile/app/src/main/res/drawable/: ic_launcher_foreground.xml
gemma-mobile/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+4 files in other folders)
